# musicdj

./: .env.example  .gitignore  AUDIT_LOGGING.md  PYTHON_DEPENDENCIES.md  SECURITY_COMPLETION_SUMMARY.md  SECURITY_ENHANCED.md  SECURITY_IMPLEMENTATION.md  TYPESCRIPT_IMPROVEMENTS.md  UPDATED_FILE_STRUCTURE_REPORT.md  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  semgrep-report.json  semgrep-report.txt  test-parameter-validation.py  test-path-security.ts  vite.config.ts
client/src/components/: EnhancedSettingsPanel.tsx  EnhancedUpload.tsx  JobQueueMonitor.tsx  ProcessingInfo.tsx  SettingsPanel.tsx  StreamingUploadSection.tsx  TrackPreview.tsx  UploadSection.tsx
logs/: README.md
scripts/: audit-log-manager.js  bundle-size-monitor.js  run-migration.js  test-audit-logging.js  test-cors-config.js  test-streaming-upload.js  validate-python-deps.py
server/: audioProcessor.py  audioProcessor_optimized.py  audio_optimization_integration.py  audio_processing_config.py  cors-config.ts  index.ts  jobQueueRoutes.ts  jobQueueSimple.ts  routes.ts  security-middleware.ts  security-utils.ts  storage.ts  streaming-routes.ts  streaming-upload.ts  utils.py  utils_optimized.py  vite.ts  websocketManager.ts
